--- a/invitroTKstats/vignettes/Clint_vignette.Rmd
+++ b/invitroTKstats/vignettes/Clint_vignette.Rmd
@@ -508,7 +508,7 @@ where $a$ and $b$ are the minimum and maximum, respectively, and $m_{h,w}$ is th
 
 $$ C_{thresh,w} \sim \textrm{Unif} \left( a = 0,b = \frac{conc_{target,w}}{10} \right)$$
 
-where $a$ and $b$ are the minimum and maximum, respectively.
+where $a$ and $b$ are the minimum and maximum, respectively, and $conc_{target,w}$ is the expected initial concentration (`Test.Nominal.Conc`) for calibration index $w$.
 
 **Prior for the log-scale calibration (`log.calibration`):**
 
@@ -530,7 +530,7 @@ Estimation for the predicted values for blank observations (`Blank.pred`):
 
 $$ x_{blank,j} = \frac{\gamma_{j}}{df_{blank,j}} $$
 
-
+where $df_{blank,j}$ is the dilution factor for the $j^{th}$ calibration for blank observations (`Blank.Dilution.Factor`).
 
 Estimation for the precision of blank observations (`Blank.prec`):
 
@@ -562,7 +562,11 @@ Estimation of the predictions for calibration curve observations (`cc.pred`):
 
 $$ x_{cc,i} = m_{cc,i} * (\frac{C_{cc,i}}{df_{cc,i}} - \frac{C_{thresh,w^*_i}}{df_{cc,i}}) * \beta_{cc,i} + \frac{\alpha_{cc,i}}{df_{cc,i}} $$
 
-$\beta_{cc,i}$ is the JAGS step function for the $i^{th}$ calibration curve observation, such that
+where
+
+* $C_{cc,i}$ is the chemical concentration (`cc.obs.conc`) for the $i^{th}$ calibration curve observation
+* $df_{cc,i}$ is the dilution factor (`cc.obs.Dilution.Factor`) for the $i^{th}$ calibration curve observation
+* $\beta_{cc,i}$ is the JAGS step function for the $i^{th}$ calibration curve observation, such that
 
 $$
 \beta_{cc,i} =
@@ -593,11 +597,17 @@ where $p$ is the probability parameter and $p_{d_c}$ is the user-specified prior
 Prior for the binary indicator for whether the concentration degrades (`degrades`):
 
 $$ d_g \sim \textrm{Bern} \left( p = p_{d_g} \right) $$
-where $p$ is the probability parameter and $p_{d_g}$ is the user-specified prior probability of instability for a chemical within the assay (i.e. abiotic degradation) (`DEGRADES.PROB`).
+where $p$ is the probability parameter and $p_{d_g}$ is the user-specified prior probability of instability for a chemical within the assay (i.e. abiotic degradation) (`DEGRADE.PROB`).
 
-Prior for the slope representing the biological clearance rate (`bio.rate`) for the lower concentration, indicated by the subscript $1$ for $C_{thresh}$ and $conc_{target}$:
+Prior for the slope representing the biological clearance rate (`bio.rate`) for the lower concentration, indicated by $C_{thresh,1}$ and $conc_{target,1}$:
 
 $$ \delta_{bio} \sim \textrm{Unif} \left( a = 0,b = -log(\frac{C_{thresh,1}}{conc_{target,1}}) \right)$$
+
+where $a$ and $b$ are the minimum and maximum, respectively.
+
+Prior for the slope representing the abiotic clearance rate, when data from the inactivated hepatocytes is available (`abio.rate`) at the lower concentration, indicated by $C_{thresh,1}$ and $conc_{target,1}$: 
+
+$$ \delta_{abio} \sim \textrm{Unif} \left( a = 0,b = -log(\frac{C_{thresh,1}}{conc_{target,1}}) \right) $$
 
 where $a$ and $b$ are the minimum and maximum, respectively.
 
@@ -612,8 +622,6 @@ where $p$ is the probability parameter and $p_{s_f}$ is the user-specified prior
 Prior for the saturation at the higher concentration (i.e. magnitude of decreased biological clearance) at the higher concentration (`saturation`): 
 
 $$ s_a \sim \textrm{Unif} \left( a = 0,b = 1 \right) $$
-
-###### Estimation of Metabolic Clearance
 
 Estimation of the actual biological clearance rate (`bio.slope`) at the lower ($m_{bio,1}$) and higher ($m_{bio,2}$) initial concentrations, respectively: 
 
@@ -630,6 +638,12 @@ $$ m_2 = d_g * \delta_{abio} + d_c * \delta_{bio} *(1-s_f*s_a) $$
 
 such that $m = (m_1,m_2)$.
 
+Estimate of the abiotic clearance rate (`abio.slope`):
+
+$$ m_{abio} = d_g * \delta_{abio} $$
+
+###### Estimation of Metabolic Clearance
+
 Suppose $n$ is the total number of observations (`Num.obs`), and $y_{i}$ indicates the $i^{th}$ observation, sample type = `Cvst` (`obs`). For each observation we obtain a posterior MCMC estimate for the calibration curve observations with the following:
 
 Estimate of the metabolic exponential decay for the $i^{th}$ observation (`C`):
@@ -638,8 +652,9 @@ $$ C_i = conc_{target,c^*_i}*exp(-m_{c^*_i}*t_i) $$
 
 where
 
-* $m_{c^*_i}$ is the total elimination rate slope for the initial concentration corresponding to the $i^{th}$ observation and $m_{c^*_i} \in m$
 * $c^*_i$ represents the initial concentration index (`obs.conc`) for the $i^{th}$ observation (i.e, $c^* = (c^*_1,\ldots,c^*_n)$) and $c^*_i \in (1,2)$ such that $1$ indicates the lower initial concentration and $2$ indicates the higher initial concentration
+* $conc_{target,c^*_i}$ is the expected initial concentration (`Test.Nominal.Conc`) corresponding to the $i^{th}$ observation, given the concentration index $c^*_i$
+* $m_{c^*_i}$ is the total elimination rate slope for the initial concentration corresponding to the $i^{th}$ observation and $m_{c^*_i} \in m$
 * $t_i$ is the time (`obs.time`) for the $i^{th}$ observation
 
 Estimate of the metabolic clearance predictions (`obs.pred`):
@@ -648,7 +663,8 @@ $$ x_i = cal_{w^*_i} * (\frac{C_i}{df_i} - \frac{C_{thresh,w^*_i}}{df_i}) * \bet
 
 where
 
-*$\beta_i$ is the JAGS step function for the $i^{th}$ observation, such that 
+* $df_i$ is the dilution factor (`obs.Dilution.Factor`) for the $i^{th}$ observation
+* $\beta_i$ is the JAGS step function for the $i^{th}$ observation, such that 
 
 $$
 \beta_i = 
@@ -657,6 +673,7 @@ $$
 0 & \textrm{otherwise}
 \end{cases}
 $$
+
 * $w^*_i$ represents the calibration index (`obs.cal`) for the $i^{th}$ observation $w^* = (w^*_1,\ldots,w^*_{n})$ and $w^*_i \in w$ (i.e. $w^*_i$ indicates one of the $n_{cal}$ calibrations)
 
 Estimates of the metabolic clearance precision (`obs.prec`):
@@ -669,16 +686,6 @@ $$ y_i \sim \textrm{N} \left( \mu = x_i,\tau = \tau_i \right)$$
 
 ###### Estimation of Abiotic Clearance
 
-Prior for the slope representing the abiotic clearance rate, when data from the inactivated hepatocytes is available (`abio.rate`) at the lower concentration, indicated by the subscript $1$ for $C_{thresh}$ and $conc_{target}$:  
-
-$$ \delta_{abio} \sim \textrm{Unif} \left( a = 0,b = -log(\frac{C_{thresh,1}}{conc_{target,1}}) \right) $$
-
-where $a$ and $b$ are the minimum and maximum, respectively.
-
-Estimate of the abiotic clearance rate (`abio.slope`):
-
-$$ m_{abio} = d_g * \delta_{abio} $$
-
 Suppose $n_{abio}$ is the total number of abiotic observations (`Num.abio.obs`), and $y_{abio,i}$ indicates the $i^{th}$ observation, sample type = `Inactive` (`abio.obs`). For each observation we obtain a posterior MCMC estimate for the calibration curve observations with the following:
 
 Estimate of the abiotic exponential decay for the $i^{th}$ observation (`abio.C`):
@@ -686,13 +693,17 @@ Estimate of the abiotic exponential decay for the $i^{th}$ observation (`abio.C`
 $$ C_{abio,i} = conc_{target,w^*_i} * exp(-m_{abio}*t_{abio,i}) $$
 
 * $w^*_i$ represents the calibration index (`abio.obs.cal`) for the $i^{th}$ non-biological observation $w^* = (w^*_1,\ldots,w^*_{n_abio})$ and $w^*_i \in w$ (i.e. $w^*_i$ indicates one of the $n_{cal}$ calibrations)
+* $conc_{target,w^*_i}$ is the expected initial concentration (`Test.Nominal.Conc`) corresponding to the $i^{th}$ observation, given the calibration index $w^*_i$
 * $t_{abio,i}$ is the time for the $i^{th}$ abiotic observation (`abio.obs.time`)
 
 Estimates for the abiotic clearance predictions (`abio.obs.pred`):
 
 $$ x_{abio,i} = cal_{w^*_i} * (\frac{C_{abio,i}}{df_{abio,i}} - \frac{C_{thresh,w^*_i}}{df_{abio,i}}) * \beta_{abio,i} + \frac{\gamma_{w^*_i}}{df_{abio,i}} $$
 
-where $\beta_{abio,i}$ is the JAGS step function for the $i^{th}$ abiotic observation, such that
+where
+
+* $df_{abio,i}$ is the dilution factor (`abio.obs.Dilution.Factor`) for the $i^{th}$ abiotic observation
+* $\beta_{abio,i}$ is the JAGS step function for the $i^{th}$ abiotic observation, such that
 
 $$
 \beta_{abio,i} = 
@@ -715,13 +726,14 @@ $$ y_{abio,i} \sim \textrm{N} \left( \mu = x_{abio,i},\tau = \tau_{abio,i} \righ
 Conversion of disappearance rates (1/hr) to hepatic clearance ($\mu L/min/10^6$) for $1 \mu M$:
 
 $$ \mathbf{Clint.1} = 1000*\frac{m_{bio,1 \mu M}}{\rho_{hep}*60} $$
-where $\rho_{hep}$ is the hepatic density and $m_{bio,1 \mu M}$ is the slope for "bio" at $1 \mu M$.
 
+where $\rho_{hep}$ is the hepatic density and $m_{bio,1 \mu M}$ is the slope for "bio" at $1 \mu M$ (i.e. $m_{bio,1} = m_{bio,1 \mu M}$ where $m_{bio,1}$ is the notation in earlier equations in the Clearance Model section).
 
 Conversion of disappearance rates (1/hr) to hepatic clearance ($\mu L/min/10^6$) for $10 \mu M$:
 
 $$ \mathbf{Clint.10} = 1000*\frac{m_{bio,10 \mu M}}{\rho_{hep}*60} $$
-where $\rho_{hep}$ is the hepatic density and $m_{bio,1 \mu M}$ is the slope for "bio" at $10 \mu M$.
+
+where $\rho_{hep}$ is the hepatic density and $m_{bio,10 \mu M}$ is the slope for "bio" at $10 \mu M$ (i.e. $m_{bio,2} = m_{bio,10 \mu M}$ where $m_{bio,2}$ is the notation in earlier equations in the Clearance Model section).
 
 Posterior probability for intrinsic hepatic clearance:
 
@@ -760,7 +772,7 @@ Data passed to JAGS as part of the `PREJAGS` object:
 | `Blank.cal` | $w^*$ | calibration index for `Blank` samples  (reused index) |
 | `Blank.Dilution.Factor` | $df_{blank}$ | dilution factors for `Blank` samples |
 | `Num.cc` | $n_{cc}$ | total number of `CC` samples |
-| `cc.obs.conc` | $C_{cc}$ | `Test.Nominal.Conc` indices for `CC` samples |
+| `cc.obs.conc` | $C_{cc}$ | `Test.Compound.Conc` for `CC` samples of the tested compounds |
 | `cc.obs` | $y_{cc}$ | `CC` sample responses |
 | `cc.obs.cal` | $w^*$ | calibration index for `CC` samples (reused index) |
 | `cc.obs.Dilution.Factor` | $df_{cc}$ | dilution factors for `CC` samples |
@@ -776,7 +788,7 @@ User-specified prior parameter values via level-4 function arguments and passed 
 |   Prior   | Notation | level-4 Argument (Default) | Description |
 |-----------|----------|------------------|-------------|
 | `DECREASE.PROB` | $p_{d_c}$ | `decrease.prob` (0.5) | probability that a chemical will decrease in the assay |
-| `DEGRADES.PROB` | $p_{d_g}$ | `degrade.prob` (0.05) | probability of instability for a chemical within the assay (i.e. abiotic degradation) |
+| `DEGRADE.PROB` | $p_{d_g}$ | `degrade.prob` (0.05) | probability of instability for a chemical within the assay (i.e. abiotic degradation) |
 | `SATURATE.PROB` | $p_{s_f}$ | `saturate.prob` (0.25) | probability that a chemical's rate of metabolism will decrease between the lower and higher concentration |
 
 MCMC Parameters in JAGS:
@@ -809,7 +821,7 @@ MCMC Parameters in JAGS:
 | `saturation` | $s_a$ | Uniform | Prior |
 | `C` | $C$ | | Calculated |
 | `obs.pred` | $x$ | | Calculated | 
-| `obs.prec` | $p$ | | Calculated |
+| `obs.prec` | $\tau$ | | Calculated (*Not the general distribution parameter.*) |
 | `obs` | $y$ | Normal | Posterior |
 | `abio.slope` | $m_{abio}$ | | Calculated |
 | `abio.C` | $C_{abio}$ | | Calculated |
