--- a/invitroTKstats/vignettes/FupUC_vignette.Rmd
+++ b/invitroTKstats/vignettes/FupUC_vignette.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Fup UC"
+title: "Fraction Unbound in Plasma - Ultracentrifugation (f~up~ UC)"
 output: rmarkdown::html_vignette
 bibliography: '`r system.file("REFERENCES.bib", package="invitroTKstats")`'
 vignette: >
@@ -406,7 +406,7 @@ where $a$ and $b$ are the minimum and maximum, respectively, and $m_{h,w}$ is th
 
 $$ C_{thresh,w} \sim \textrm{Unif} \left( a = 0, b = \frac{conc_{target,w}}{10} \right)$$
 
-where $a$ and $b$ are the minimum and maximum, respectively, and $conc_{target}$ is the expected initial concentration (`Test.Nominal.Conc`) for calibration index $w$.
+where $a$ and $b$ are the minimum and maximum, respectively, and $conc_{target,w}$ is the expected initial concentration (`Test.Nominal.Conc`) for calibration index $w$.
 
 **Prior for the log-scale calibration (`log.calibration`):**
 
@@ -422,74 +422,160 @@ where $\lambda$ is the rate parameter.
 
 #### Estimation of Response Observations
 
-Suppose $n$ is the total number of response observations (`Num.obs`), and $y_i$ indicates the $i^{th}$ observation, sample type = "<>" (`<>`). For each observation we obtain a posterior MCMC estimate for the calibration curve observation with the following:
+Suppose $n$ is the total number of response observations (`Num.obs`), and $y_i$ indicates the $i^{th}$ observation, for all sample types. For each observation we obtain a posterior MCMC estimate for the observations with the following:
+
+Calibration curve slope for the $i^{th}$ observation (`slope`) is assumed to be the calibration estimate corresponding to the calibration index ($w^*_i$):
+
+$$ m_i = cal_{w^*_i}$$
+
+where $w^*_i$ is the calibration index (`obs.cal`) for the $i^{th}$ observation, such that $w^* = (w^*_1,...,w^*_n)$ and $w^*_i \in w$ (i.e. $w^*_i$ indicates one of the $n_{cal}$ calibrations).
+
+Calibration curve intercept for the $i^{th}$ observation (`intercept`) is assumed to be the background estimate corresponding to the calibration index ($w^*_i$):
+
+$$ \alpha_{cc,i} = \gamma_{w^*_i} $$
 
 Estimation for the predicted values for response observations (`Response.pred`):
 
-$$ x_i = m_i*((C_{k^*_i}- C_{thresh,w^*_i}) * \beta_i + \alpha_i) $$
+$$ x_i = \frac{m_i*((C_{c^*_i}- C_{thresh,w^*_i}) * \beta_i + \alpha_i)}{df_i} $$
 
 where
 
-* $m_i$
+* $c^*_i$ is the index for the standard test chemical concentration (`obs.conc`) for the $i^{th}$ observation
+* $df_i$ is the dilution factor (`Dilution.Factor`) for the $i^{th}$ observation
 * $\beta_i$ is the JAGS step function for the $i^{th}$ observation, such that
 
 $$ \beta_i = 
 \begin{cases}
-1 & if \space C_{k^*_i}- C_{thresh,w^*_i} \ge 0\\
+1 & if \space (C_{c^*_i}- C_{thresh,w^*_i}) \ge 0\\
 0 & o.w.
 \end{cases}
 $$
 
-* $w^*_i$ represents the calibration index (`obs.cal`) for the $i^{th}$ observation $w^* = (w^*_1, \ldots, w^*_n)$ and $w^*_i \in w$ (i.e. $w^*_i$ indicates one of the $n_{cal}$ calibrations).
+Estimation of the precision for observations (`Response.prec`):
 
+$$  \tau^*_i = \frac{1}{(\sigma_{a,w^*_i}+m_{h,w^*_i}*y_i)^2} $$
 
-$$  \tau_i = \frac{1}{(\sigma_{a,w^*_i}+m_{h,w^*_i}*y_i)^2} $$
+**Likelihood for the observations (`Response.obs`):**
 
-$$ y_i \sim N(\mu = x_i,\tau = \tau_i) $$
-
-where $y_i$ is the $i^{th}$ observation and $w^*_i$ is the calibration index for observation $i$, such that $w^*_i = (w^*_1,...,w^*_n)$ and $w^*_i \in w$ (i.e. $w^*_i$ indicates one of the calibrations). Finally, $k^*_i$ is the initial concentration index for observation $i$, such that $k^* = (k^*_1,...,k^*_n)$ and $k*_i \in k$ (i.e. $k^*_i$ indicates one of the expected initial concentrations and $k = (1,...,n_{C})$ is the set of all possible initial concentrations for the experiment, $n_C$ is the total number of nominal concentration values).
+$$ y_i \sim N(\mu = x_i,\tau = \tau^*_i) $$
 
 #### Binding Model
 
-$$ log(f_{up}) \sim U(-15,0) ; \space f_{up} = 10^{log(f_{up})} $$
-$$ log(f_{loss}) \sim U(-6,0) $$
-$$ f_{stable} = 1 - 10^{log(f_{loss})} $$
+**Prior for the log-scale fraction unbound in plasma (`log.Fup`):**
 
-$$ C_i \sim N(conc_{target,w^*_i},100) $$
+$$ log(f_{up}) \sim \textrm{Unif} \left( a = -15, b = 0 \right) ; \space f_{up} = 10^{log(f_{up})} $$
+
+where $a$ and $b$ are the minimum and maximum, respectively, and $f_{up}$ is the converted parameter used in later equations (`Fup`).
+
+**Prior for the log-scale chemical loss fraction (`log.Floss`):** 
+
+$$ log(f_{loss}) \sim \textrm{Unif} \left( a = -6,b = 0 \right); \space f_{stable} = 1 - 10^{log(f_{loss})} $$
+
+where $a$ and $b$ are the minimum and maximum, respectively, and $f_{stable}$ is the converted parameter used in later equations (`Fstable`) estimating the fraction of stable chemical in the assay and available for plasma binding.
+
+Suppose $n_s$ is the total number of series run (i.e. biological replicates) (`Num.series`) and $C_i$ indicates the $i^{th}$ series. Each series has a total of 3 observations, including the 1 and 5 hour whole plasma and aqueous fraction observations (i.e. sample types = `T1` or `T5` or `AF`, respectively), such that there are a total of $n*$ observations (i.e., $n^* = 3*n_s$).  For each series obtain the following:
+
+**Prior for the whole plasma 1 hour sample (`T1`) concentration (`Conc`):** 
+
+$$ C_i \sim \textrm{N} \left( \mu = conc_{target,w^*_i}, \tau = 100 \right) $$
+
+where
+
+* $\mu$ and $\tau$ are the mean and precision, respectively
+* $i$ indicates the $i^{th}$ series run (biological replicate)
+* $w^*_i$ represents the calibration index (`obs.cal`) for the $i^{th}$ series $w^* = (w^*_1, \ldots,w^*_n)$ and $w^*_i \in w$ (i.e. $w^*_i$ indicates one of the $n_{cal}$ calibrations)
+* $conc_{target,w^*_i}$ is the expected initial concentration (`Test.Nominal.Conc`) corresponding to the $i^{th}$ series, given the calibration index $w^*_i$
+
+Posterior estimate for the whole plasma 5 hour sample (`T5`) concentrations (after potential breakdown):  
 
 $$ C_{T5,i} = f_{stable} * C_i $$
 
+Posterior estimate for the aqueous fraction sample (`AF`) concentrations for the stable chemical at `T5`: 
+
 $$ C_{AF,i} = f_{up}*C_{T5,i} $$
 
-where $C_i$ is the $i^{th}$ T1 concentration and $w^*_i$ is the calibration index for observation $i$, such that $w^*_i = (w^*_1,...,w^*_n)$ and $w^*_i \in w$ (i.e. $w^*_i$ indicates one of the calibrations). $C_{T5,i}$ and $C_{AF,i}$ are the estimated breakdown at T5 and the remaining stable concentration in the aqueous fraction (AF), respectively, given $C_i$.
+### Post-MCMC Estimates
+
+#### Fraction of Chemical Stability
+
+Posterior estimates for the fraction of stable chemical in the assay, including the median (`Fstable.Med`) and $95\%$ credible interval (`Fstable.Low` and `Fstable.High`):
+
+$$ \textrm{Fstable.Med} = f_{stable,0.5} $$
+
+$$ \textrm{Fstable.CI} = (\textrm{Fstable.Low},\textrm{Fstable.High}) = (f_{stable,0.025},f_{stable,0.975}) $$
+
+where $f_{stable,p}$ indicates the percentile ($p$) for the posterior distribution of the chemical stability fraction, ($p = 0.5$ indicates the $50\%$ percentile, i.e. median, for the posterior distribution).
+
+#### Fraction of Chemical Unbound in Plasma (Bayesian Estimates)
+
+Posterior estimates for the chemical fraction unbound in plasma, including the median (`Fup.Med`) and $95\%$ credible interval (`Fup.Low` and `Fup.High`):
+
+$$ \textrm{Fup.Med} = f_{up,0.5} $$
+
+$$ \textrm{Fup.CI} = (\textrm{Fup.Low},\textrm{Fup.High}) = (f_{up,0.025},f_{up,0.975}) $$
+
+where $f_{up,p}$ indicates the percentile ($p$) for the posterior distribution of the fraction of the chemical unbound in plasma, ($p = 0.5$ indicates the $50\%$ percentile, i.e. median, for the posterior distribution).
+
+#### Fraction Unbound in Plasma (Empirical Point Estimate)
+
+Point estimate for the chemical fraction unbound in plasma (`Fup.point`):
+
+Suppose there are a total of $n_{AF}$ observed aqueous fraction (`AF`) responses, then estimate the mean response:
+
+$$ \hat{\mu_{AF}} = \frac{\sum_{j = 1}^{n_{AF}}(y_{AF,j} * df_{AF,j})}{n_{AF}} $$
+
+where $y_{AF,j}$ is the response and $df_{AF,j}$ is the dilution factor for the $j^{th}$ aqueous fraction observation, sample type = `AF`.
+
+Suppose there are a total of $n_{T5}$ observed whole plasma 5 hour (`T5`) responses, then estimate the mean response:
+
+$$ \hat{\mu_{T5}} = \frac{\sum_{j = 1}^{n_{T5}}(y_{T5,j} * df_{T5})}{n_{T5}} $$
+
+where $y_{T5,j}$ is the response and $df_{T5,j}$ is the dilution factor for the $j^{th}$ whole plasma 5 hour observation, sample type = `T5`.
+
+Then the fraction unbound in plasma point estimate can be estimated as follows:
+
+$$ \textrm{Fup.point} = \frac{\hat{\mu_{AF}}}{\hat{\mu_{T5}}} $$
+
 
 ### JAGS to L4 Equation Notation Tables
 
-|       Data        |   Denotation    |
-|-------------------|-----------------|
-| Test.Nominal.Conc | $conc_{target}$ |
-|  Dilution.Factor  | $df$            |
+Data passed to JAGS as part of the `PREJAGS` object:
 
-| JAGS Parameter Name | Parameter | Distribution |
-|---------------------|-----------|--------------|
-| log.const.analytic.sd | $log(\sigma_a)$ | Uniform |
-| log.hetero.analytic.slope | $log(m_h)$ | Uniform |
-| C.thresh | $C_{thresh}$ | Uniform |
-| log.calibration | $log(cal)$ | Normal |
-| background | $\gamma$ | Exponential |
-| const.analytic.sd | $\sigma_a$ | |
-| hetero.analytic.slope | $m_h$ | |
-| calibration | $cal$ | |
-| slope | $m$ | |
-| intercept | $\alpha$ | |
-| Response.pred | $x$ | |
-| Response.prec | $p$ | |
-| Response.obs | $y$ | Normal |
-| log.Fup | $log(f_{up})$ | Uniform |
-| Fup | $f_{up}$ | |
-| log.Floss | $log(f_{loss})$| Uniform |
-| Fstable | $f_{stable}$| |
-| Conc | $C$ | Normal |
+|       Data        |   Notation    | Description |
+|-------------------|---------------|-------------|
+| `Test.Nominal.Conc` | $conc_{target}$ | expected initial concentration |
+| `Num.cal` | $n_{cal}$ | total number of calibrations |
+| `Num.obs` | $n$ | total number of responses |
+| `Response.obs` | $y$ | all sample responses |
+| `obs.conc` | $c^*$ | `Conc` indices for `CC` samples |
+| `obs.cal` | $w^*$ | calibration index for all samples |
+| `Dilution.Factor` | $df$ | dilution factors for all samples |
+| `Conc` | $C$ | the standard test chemical concentration of `CC` samples (and `NA` placeholders for `T1`, `T5`, and `AF` samples) |
+| `Num.cc.obs` | $n_{cc}$ | total number of `CC` samples |
+| `Num.series` | $n_s$ | number of biological replicates (series) |
+
+MCMC Parameters in JAGS:
+
+| JAGS Parameter Name | Parameter | Distribution | Prior/Posterior/Calculated |
+|---------------------|-----------|--------------|----------------------------|
+| log.const.analytic.sd | $log(\sigma_a)$ | Uniform | Prior |
+| log.hetero.analytic.slope | $log(m_h)$ | Uniform | Prior |
+| C.thresh | $C_{thresh}$ | Uniform | Prior |
+| log.calibration | $log(cal)$ | Normal | Prior |
+| background | $\gamma$ | Exponential | Prior |
+| const.analytic.sd | $\sigma_a$ | | Calculated |
+| hetero.analytic.slope | $m_h$ | | Calculated |
+| calibration | $cal$ | | Calculated |
+| slope | $m$ | | Calculated |
+| intercept | $\alpha$ | | Calculated |
+| Response.pred | $x$ | | Calculated |
+| Response.prec | $\tau^*$ | | Calculated |
+| Response.obs | $y$ | Normal | Posterior |
+| `log.Fup` | $log(f_{up})$ | Uniform | Prior |
+| `Fup` | $f_{up}$ | | Calculated |
+| `log.Floss` | $log(f_{loss})$| Uniform | Prior |
+| `Fstable` | $f_{stable}$| | Calculated |
+| `Conc` | $C$ | Normal (`T1`) / - (`T5`, `AF`) | Prior (`T1`) / Calculated (`T5`, `AF`) |
 
 ## References 
 
